2009-11-10  Torbjorn Granlund  <tege@gmplib.org>

	* configure.in: Supply compiler options for atom in 32-bit mode.

	* acinclude.m4 (X86_64_PATTERN): New.
	* configure.in: Setup and use X86_64_PATTERN.

	* mpn/x86_64/fat/fat.c: New file.
	* mpn/x86_64/fat/fat_entry.asm: New file.
	* mpn/x86_64/fat: Copy C placeholder files from mpn/x86/fat.
	* mpn/x86_64/x86_64-defs.m4 (CPUVEC_FUNCS_LIST): New, copied from
	mpn/x86/x86-defs.m4.
	* configure.in: Move down x86 fat setup code until after ABI has been
	determined; generalize to handle x86_64.

2009-11-09  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/x86/fat/mod_1.c: New file.

	* acinclude.m4 (GMP_C_FOR_BUILD_ANSI): Avoid poor quoting.

2009-11-08  Torbjorn Granlund  <tege@gmplib.org>

	* gmp-impl.h (MPN_LOGOPS_N_INLINE): Rewrite, update interface.  Callers
	updated.
	* mpn/generic/logops_n.c: New file.
	* doc/gmp.texi (Low-level Functions): Document logical mpn functions.

2009-11-07  Torbjorn Granlund  <tege@gmplib.org>

	* tune/speed.h (SPEED_ROUTINE_MPN_MULMOD_BNM1): Adapt to new
	mpn_mulmod_bnm1 interface.

2009-11-07  Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mpn/generic/mulmod_bnm1.c: New interface, with size
	specified for all operands in mpn_mulmod_bnm1.
	* gmp-impl.h: Changed mpn_mulmod_bnm1 prototype.

2009-11-05  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/x86/k7/gcd_1.asm: Actually use div-reduced value.
	Mnemonic cleanup.

	* mpn/x86_64/gcd_1.asm: New file.

2009-11-03  Torbjorn Granlund  <tege@gmplib.org>

	* tune/Makefile.am (TUNE_MPN_SRCS_BASIC): Add sqr_n.c.

2009-11-03  Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mpn/generic/toom_interpolate_6pts.c: removed an addmul_1 and cleanup.

2009-11-02  Torbjorn Granlund  <tege@gmplib.org>

	* configure.in (gmp_mpn_functions): Remove obsolete functions
	dc_divrem_n and sb_divrem_mn.
	* gmp-impl.h: Misc cleanup.
	(mpn_sb_divrem_mn, mpn_dc_divrem_n): Remove.
	(DIV_DC_THRESHOLD): Remove.
	* mpn/generic/dc_divrem_n.c: Remove.